tests/snapshots/run_wpt_conformance__litert_conv2d_default___prelu.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
subgraph.https.any.js conv2d default + prelu, litert
 Failed to dispatch graph: LiteRT status error: code=3

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    conv2dFilter: f32[1, 1, 3, 3];
    conv2dInput: f32[1, 1, 5, 5];
    preluSlope: f32[1, 1, 3, 3];
  }

  nodes {
    [operand_3] = conv2d(conv2dInput, conv2dFilter, bias=null, dilations=[], filterLayout="", groups=1, inputLayout="", label="", padding=[], strides=[]);
    [output] = prelu(operand_3, preluSlope, label="");
  }

  outputs { output; }
}
