tests/snapshots/run_wpt_conformance__litert_conv2d_default___softmax.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
subgraph.https.any.js conv2d default + softmax, litert
 subgraph :: conv2d default + softmax: index 0: actual=0.44125816 expected=1 ulp=10359657 tolerance=16384
  inputs: conv2dFilter: [0.3804761469364166, 0.5280312299728394, 0.21947036683559415, 0.3668977022171021, 0.33974137902259827, 0.4200059771537781, 0.3805030882358551, 0.19443586468696591, 0.5686976909637451]; conv2dInput: [0.6124474406242371, 0.8857858777046204, 0.13667134940624237, 0.5645291209220886, 0.8965172171592712, 0.36792829632759094, 0.6811466217041016, 0.0479511022567749, 0.33355462551116943, 0.19882695376873016, 0.4116714000701904, 0.07934240251779556, 0.4272463321685791, 0.535800576210022, 0.5910806059837341, 0.28415432572364807, 0.4147258698940277, 0.026906268671154976, 0.3621256649494171, 0.994568169116974, 0.07184549421072006, 0.12204372137784958, 0.8422137498855591, 0.4537501037120819 ...] (len=25)
  expected output: [1, 1, 1, 1, 1, 1, 1, 1, 1]
  actual output: [0.44125816, 0.3831044, 0.28958175, 0.27837917, 0.30396724, 0.32233247, 0.28036267, 0.31292844, 0.38808575]
  expected output full nd:
(shape [1, 1, 3, 3])
  [1, 1, 1] [1, 1, 1] [1, 1, 1]
  actual output full nd:
(shape [1, 1, 3, 3])
  [0.44125816, 0.3831044, 0.28958175] [0.27837917, 0.30396724, 0.32233247] [0.28036267, 0.31292844, 0.38808575]

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    conv2dFilter: f32[1, 1, 3, 3];
    conv2dInput: f32[1, 1, 5, 5];
  }

  nodes {
    [operand_2] = conv2d(conv2dInput, conv2dFilter, bias=null, dilations=[], filterLayout="", groups=1, inputLayout="", label="", padding=[], strides=[]);
    [output] = softmax(operand_2, label="");
  }

  outputs { output; }
}
